Add daily ratings APIs.  * Create DailyRating model.  * Add APIs for basic users to create and retrieve ratings.
