# app/models/__init__.py
@@ -1,1 +1,2 @@
 from .User import User
+from .DailyRating import DailyRating
